Phase out command relationships and user permissions